vbnc/vbnc/tests/Errors/30060-12.vb
Class T
    Const M_String As String = CSByte(2)
End Class